; ModuleID = '/home/carl/AnghaBench/libgit2/tests/revwalk/extr_basic.c_test_revwalk_basic__push_range.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/revwalk/extr_basic.c_test_revwalk_basic__push_range.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_walk = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"9fd738e~2..9fd738e\00", align 1
@commit_sorting_segment = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_revwalk_basic__push_range() #0 {
  %1 = call i32 @revwalk_basic_setup_walk(i32* null)
  %2 = load i32, i32* @_walk, align 4
  %3 = call i32 @git_revwalk_reset(i32 %2)
  %4 = load i32, i32* @_walk, align 4
  %5 = call i32 @git_revwalk_sorting(i32 %4, i32 0)
  %6 = load i32, i32* @_walk, align 4
  %7 = call i32 @git_revwalk_push_range(i32 %6, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %8 = call i32 @cl_git_pass(i32 %7)
  %9 = load i32, i32* @_walk, align 4
  %10 = load i32, i32* @commit_sorting_segment, align 4
  %11 = call i32 @test_walk_only(i32 %9, i32 %10, i32 2)
  %12 = call i32 @cl_git_pass(i32 %11)
  ret void
}

declare dso_local i32 @revwalk_basic_setup_walk(i32*) #1

declare dso_local i32 @git_revwalk_reset(i32) #1

declare dso_local i32 @git_revwalk_sorting(i32, i32) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_revwalk_push_range(i32, i8*) #1

declare dso_local i32 @test_walk_only(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
